--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,29 +6,9 @@
     app:startDestination="@id/HomeFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.deltascan.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.deltascan.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/HomeFragment"
         android:name="com.example.deltascan.HomeFragment"
-        android:label="@string/second_fragment_label"
+        android:label="@string/home_fragment_label"
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_HomeFragment_to_ScanFragment"
@@ -99,5 +79,8 @@
         <action
             android:id="@+id/action_BarcodeAnalysisFragment_to_PaintFragment"
             app:destination="@id/PaintFragment" />
+        <argument
+            android:name="previousFragment"
+            app:argType="string" />
     </fragment>
 </navigation>
