--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,6 +32,17 @@
             app:layout_constraintStart_toStartOf="@+id/paintButton"
             app:layout_constraintTop_toBottomOf="@+id/paintButton"
             app:layout_constraintVertical_bias="0.131" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DeltaScan"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.08" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
