--- a/app/src/main/res/layout/fragment_settings_paint.xml
+++ b/app/src/main/res/layout/fragment_settings_paint.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFA2CD"
+    android:background="@color/pink"
     tools:context=".SettingsPaintFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,6 +16,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sound"
+            android:textColor="@color/brown"
+            android:textColorHighlight="@color/brown"
+            android:textColorHint="@color/brown"
+            android:textColorLink="@color/brown"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +33,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings"
+            android:textColor="@color/brown"
+            android:textColorHighlight="@color/brown"
+            android:textColorHint="@color/brown"
+            android:textColorLink="@color/brown"
             android:textSize="34sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +49,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/timer"
+            android:textColor="@color/brown"
+            android:textColorHighlight="@color/brown"
+            android:textColorHint="@color/brown"
+            android:textColorLink="@color/brown"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +66,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/numScan"
+            android:textColor="@color/brown"
+            android:textColorHighlight="@color/brown"
+            android:textColorHint="@color/brown"
+            android:textColorLink="@color/brown"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/amntScanInput"
@@ -65,10 +81,14 @@
         <EditText
             android:id="@+id/amntScanInput"
             android:layout_width="93dp"
-            android:layout_height="42dp"
+            android:layout_height="48dp"
             android:ems="10"
             android:importantForAutofill="no"
             android:inputType="number"
+            android:textColor="@color/brown"
+            android:textColorHighlight="@color/brown"
+            android:textColorHint="@color/brown"
+            android:textColorLink="@color/brown"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
