--- a/app/src/main/res/layout/fragment_barcode_analysis.xml
+++ b/app/src/main/res/layout/fragment_barcode_analysis.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFDA80"
+    android:background="@color/yellow"
     tools:context=".BarcodeAnalysisFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
